# hellcast

./: .gitattributes  .gitignore  CMakeLists.txt
include/glad/: glad.h
src/: main.cpp
